# Particle_system

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile_linux  Makefile_macosx  README.md
includes/: Camera.hpp  Cubemap.hpp  GLFW_Window.hpp  Glfw_manager.hpp  IEntity.hpp  IInteractive.hpp  Input.hpp  Renderer.hpp  Shader.hpp  Simple_box.hpp  Simple_cloud.hpp  Texture.hpp  Window.hpp  World.hpp  oCL_module.hpp  oGL_module.hpp
kernels/: particle.clh
kernels/gravity/: gravity.cl
kernels/lifetime/: lifetime.cl
kernels/random/: kikoo.cl  mega_cross.cl  random_cross.cl  random_cute.cl  random_disc.cl  random_hat.cl  random_sphere.cl  random_square.cl
shaders/simple_cloud/: simple_cloud.fs  simple_cloud.vs
srcs/: Camera.cpp  Cubemap.cpp  GLFW_Window.cpp  Glfw_manager.cpp  Input.cpp  Renderer.cpp  Shader.cpp  Simple_box.cpp  Simple_cloud.cpp  Texture.cpp  Window.cpp  World.cpp  main.cpp  oCL_module.cpp  oGL_module.cpp
